# bitcoin_explorer

./: .gitignore  README.md  demo.session.sql  docker-compose.yml  schema.sql
.github/workflows/: docker-image.yml
backend/: package-lock.json  package.json  server.js
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
rust_ingestion/: Cargo.toml  Dockerfile
rust_ingestion/src/: main.rs
